--- a/curso/catalogo/css/app.css
+++ b/curso/catalogo/css/app.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;600&display=swap');
 
 body{
@@ -53,6 +54,13 @@ main{
     .sep{
         margin-left: 16px;
     }
+    .sep-r{
+        margin-right: 16px;
+    }
+
+    .w-640{
+        max-width: 640px;
+    }
 
     .producto{
         display: flex;
@@ -90,7 +98,7 @@ main{
     }
     .precio3{
         color: #47ad8b;
-        font-size: 1.12em;
+        font-size: 1.15em;
         font-weight: 500;
     }
     textarea{
